--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 i hate markdown.
+this is just shit program that i write. 
+cuz getting bored when trying to solve that shit machine.
+happy coding!
